--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <div class="container" id="intro">
       <div class="profile-pic-container">
-        <img class="profile-pic" src="/profile.png" alt="Pallab Gautam Image" />
+        <img class="profile-pic" src="profile.png" alt="Pallab Gautam Image" />
       </div>
       <div class="profile">
         <div class="name"> Pallab Gautam</div>
@@ -62,11 +62,11 @@
     <div class="container" id="portfolio">
       <div class="name">Portfolio</div>
       <div class="images">
-        <img src="/trees.png" alt="trees" />
-        <img src="/hills.png" alt="hills" />
+        <img src="trees.png" alt="trees" />
+        <img src="hills.png" alt="hills" />
         <br>
-        <img src="/mountain.png" alt="mountain" />
-        <img src="/rocks.png" alt="rocks" />
+        <img src="mountain.png" alt="mountain" />
+        <img src="rocks.png" alt="rocks" />
       </div>
     </div>
     <div class="container" id="contact">
