--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <img class="profile-pic" src="profile.png" alt="Pallab Gautam Image" />
       </div>
       <div class="profile">
-        <div class="name"> Pallab Gautam</div>
-        <hr>
+        <div class="name"> Pallab Gautam,</div>
           Android and Web Developer <br />
           UI / UX Designer
         </div>
