--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img class="profile-pic" src="profile.png" alt="Pallab Gautam Image" />
       </div>
       <div class="profile">
-        <div class="name"> Pallab Gautam,</div>
+        <div class="name"> Pallab Gautam</div>
           Android and Web Developer <br />
           UI / UX Designer
         </div>
@@ -82,7 +82,8 @@
           placeholder="Phone Number"
         />
         <br />
-        <input type="text" class="contact-details" placeholder="Message" />
+        <!-- <input type="text" class="contact-details" placeholder="Message" /> -->
+        <textarea class="contact-details" placeholder="Message" ></textarea>
         <br />
         <div id="send">
           <button>Send</button>
