--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>PallabGautam</title>
   </head>
   <body>
     <!-- HTMl -->
